# text2cadreview

./: .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  docs.yml  test.yml
docs/: 01_generate_project_skeleton.prompt.md  api.md  conf.py  index.rst  readme.md  requirements.txt  text-to-cad.md  usage.md
docs/autocad/prompts/: 001_what_are_scr_and_autolisp_and_pyautocad.prompt.md
text2cadreview/: README.md  __init__.py
