[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "text2cadreview"
version = "0.1.0"
description = "TODO"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Add your runtime dependencies here
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "furo",
    "myst-parser"
]
test = [
    "pytest",
    "coverage",
    "ruff",
    "pre-commit"
]

[tool.setuptools.packages.find]
where = ["text2cadreview"]

[tool.ruff]
line-length = 80
select = ["E", "F", "W", "I"]
ignore = []
